<resources>
    <string name="app_name">工厂测试模式</string>
    <string name="app_name_dev">开发测试模式</string>
    <string name="ManuTest">手动测试</string>
    <string name="AutoTest">自动测试</string>
    <string name="ForDebug">调试</string>
    <string name="auto_version">版本</string>
    <string name="Version">版本信息</string>
    <string name="Press_to_show">按此显示</string>
    <string name="device_info_default">未知</string>
    <string name="firmware_version">Android 版本</string>
    <string name="model_number">型号</string>
    <string name="baseband_version">基带版本</string>
    <string name="kernel_version">内核版本</string>
    <string name="build_number">版本号</string>
		<string name="auto_trace_info_title">Trace Ability</string>
		<string name="auto_trace_info_result">测试结果</string>
		<string name="auto_trace_info_pt_pass">PT测试:PASS</string>
		<string name="auto_trace_info_pt_ng">PT测试:NG</string>
		<string name="auto_trace_info_ft_pass">FT测试:PASS</string>
		<string name="auto_trace_info_ft_ng">FT测试:NG</string>
		<string name="auto_trace_info_bt_pass">蓝牙/Wifi测试:PASS</string>
		<string name="auto_trace_info_bt_ng">蓝牙/Wifi测试:NG</string>
    <string name="auto_touch">触摸屏</string>
    <string name="auto_key">按键</string>
    <string name="auto_key_left">左侧键</string>
    <string name="auto_key_vup">音量加</string>
    <string name="auto_key_vdn">音量减</string>
    <string name="auto_key_back">返回键</string>
    <string name="auto_key_menu">菜单键</string>
    <string name="auto_key_camfoc">聚焦键</string>
    <string name="auto_key_campho">拍照键</string>
    <string name="auto_key_home">待机键</string>
    <string name="auto_key_search">搜索键</string>
    <string name="auto_flash">闪光灯</string>
    <string name="auto_flash_info">请检查闪光灯</string>
    <string name="auto_key_backlight">按键背光</string>
    <string name="key_backlight_info">请检查按键背光</string>
    <string name="auto_brightness">屏幕亮度</string>
    <string name="auto_palette">LCD调色板</string>
    <string name="auto_vibrate">震动</string>
    <string name="auto_music">音乐播放</string>
    <string name="audio_speaker">扬声器</string>
    <string name="audio_speaker_info">扬声器正在播放...</string>
    <string name="auto_audioloop">音频回环</string>
    <string name="audiolooperHint">回环测试中...</string>
    <string name="auto_audioloop_info">请检查音频回环</string>
    <string name="auto_audioloop_mic_amplitude">MIC检测</string>
    <string name="auto_usb">USB</string>
    <string name="auto_usb_info">请按以下顺序操作</string>
    <string name="auto_usb_step1">  1. 插入充电器</string>
    <string name="auto_usb_step2">  2. 拔出充电器</string>
    <string name="auto_usb_step3">  3. 插入数据线</string>
    <string name="auto_usb_step4">  4. 拨出数据线</string>
    <string name="auto_earphone_insert">插入耳机</string>
    <string name="auto_ear_input">请插入耳机:</string>
    <string name="auto_earphone_music">耳机播放</string>
    <string name="audio_left">左声道</string>
    <string name="audio_right">右声道</string>
    <string name="auto_earphone_key">耳机按键</string>
    <string name="auto_earphone_key_info">测试耳机按键</string>
    <string name="audio_pause">暂停</string>
    <string name="auto_earphone_music_press_hook">*耳机按键可以暂停/播放</string>
    <string name="auto_earphone_audioloop">耳机音频回环</string>
    <string name="auto_earphone_audioloop_hint">请检查耳机音频回环</string>
    <string name="auto_fm">收音机</string>
    <string name="auto_fm_hint">请检查收音机功能:\n\n正在收听103.6</string>
    <string name="auto_search">自动搜索下个频道</string>
    <string name="auto_fm_turn">请检查收音机功能:\n\n正在收听</string>
    <string name="auto_fm_insert_headset">请插入耳机</string>
    <string name="auto_earphone_remove">拔出耳机</string>
    <string name="auto_sim">SIM 卡</string>
    <string name="auto_sim_found">检测到 SIM </string>
    <string name="auto_sim_nofound">未发现 SIM </string>
    <string name="auto_sim1_found">检测到 SIM1 </string>
    <string name="auto_sim1_nofound">未发现 SIM1 </string>
    <string name="auto_sim2_found">检测到 SIM2 </string>
    <string name="auto_sim2_nofound">未发现 SIM2 </string>
    <string name="auto_sd">SD 卡</string>
    <string name="auto_sd_invalid">未发现SD卡</string>
    <string name="memory_available">可用空间:</string>
    <string name="memory_size">总空间:</string>
    <string name="sd_unavailable">未检测到SD卡</string>
    <string name="sd_available">检测到SD卡</string>
    <string name="auto_gsensor">重力传感器</string>
    <string name="auto_gsensor_step1">1. 竖立</string>
    <string name="auto_gsensor_step2">2. 倒立</string>
    <string name="auto_gsensor_step3">3. 向左</string>
    <string name="auto_gsensor_step4">4. 向右</string>
    <string name="auto_gsensor_step5">5. 正面向上</string>
    <string name="auto_gsensor_step6">6. 正面向下</string>
    <string name="auto_gsensor_invalid_value">重力传感器数值异常！</string>
    <string name="auto_msensor">指南针</string>
    <string name="auto_psensoradu">距离传感校准</string>
    <string name="auto_psensoradu_info">在距离1厘米处挡住距离传感器，等数值稳定后，点击"开始"按钮</string>
    <string name="psensor_value">距离为:</string>
    <string name="psensor_value_old">ç的校准值为:</string>
    <string name="psensor_value_min">最小距离为:</string>
    <string name="psensor_value_max">最大距离为:</string>
    <string name="psensor_adu_success">校准成功</string>
    <string name="psensor_adu">校准</string>
    <string name="auto_psa_hint">将手机置于夹具下，点击开始进行校准</string>
    <string name="auto_psensor_init">检测距离传感器...</string>
    <string name="auto_psensor_hint">距离为 : </string>
    <string name="PSensorAdu">距离传感器校准</string>
    <string name="auto_psensor">"距离传感器"</string>
    <string name="psensor_near">距离: 近</string>
    <string name="psensor_far">距离: 远</string>
    <string name="auto_lsensor">光传感器</string>
    <string name="auto_lsensor_init">检测光亮度...</string>
    <string name="light_sensor_light">光线: 亮</string>
    <string name="light_sensor_dark">光线: 暗</string>
    <string name="auto_gyroscope">陀螺仪</string>
    <string name="auto_battery">"电池"</string>
    <string name="battery_info_status_label" >"电池状态："</string>
    <string name="battery_info_power_label" >"是否已插电："</string>
    <string name="battery_info_scale_full_label" >"电池总电量："</string>
    <string name="battery_info_scale_label" >"当前电量："</string>
    <string name="battery_info_scale_chg_label" >"充电电量："</string>
    <string name="battery_info_scale_dis_chg_label" >"放电电量："</string>
    <string name="battery_info_level_label" >"电池等级："</string>
    <string name="battery_info_health_label" >"电池运行状况："</string>
    <string name="battery_info_technology_label" >"电池技术："</string>
    <string name="battery_info_voltage_label" >"电池电压："</string>
    <string name="battery_info_voltage_units" >"mV"</string>
    <string name="battery_info_temperature_label" >"电池温度："</string>
    <string name="battery_info_temperature_units" >"° C"</string>
    <string name="battery_info_uptime" >"启动后的时间："</string>
    <string name="battery_info_awake_battery" >"电池的唤醒时间："</string>
    <string name="battery_info_awake_plugged" >"充电时的唤醒时间："</string>
    <string name="battery_info_screen_on" >"屏幕开启时间："</string>
    <string name="battery_info_status_unknown" >"未知"</string>
    <string name="battery_info_status_charging" >"正在充电"</string>
    <string name="battery_info_status_charging_ac" >"（交流电）"</string>
    <string name="battery_info_status_charging_usb" >"(USB 绑定选项)"</string>
    <string name="battery_info_status_discharging" >"正在放电"</string>
    <string name="battery_info_status_not_charging" >"未在充电"</string>
    <string name="battery_info_status_full" >"已满"</string>
    <string name="battery_info_power_unplugged" >"未插电"</string>
    <string name="battery_info_power_ac" >"交流电"</string>
    <string name="battery_info_power_usb" >"USB"</string>
    <string name="battery_info_power_ac_usb" >"交流电 + USB"</string>
    <string name="battery_info_power_unknown" >"未知"</string>
    <string name="battery_info_health_unknown" >"未知"</string>
    <string name="battery_info_health_good" >"正常"</string>
    <string name="battery_info_health_overheat" >"过热"</string>
    <string name="battery_info_health_dead" >"没电"</string>
    <string name="battery_info_health_over_voltage" >"过电压"</string>
    <string name="battery_info_health_unspecified_failure" >"未知错误"</string>
    <string name="battery_info_current_label">电池电流:</string>
    <string name="battery_info_current_units">mA</string>
    <string name="auto_bt">蓝牙</string>
    <string name="auto_bt_open">正在打开蓝牙设备</string>
    <string name="auto_bt_search">开始搜索蓝牙设备</string>
    <string name="auto_bt_not_find">没有找到蓝牙设备</string>
    <string name="auto_bt_find">检测到蓝牙设备</string>
    <string name="auto_error">错误</string>
    <string name="auto_wifi">WiFi</string>
    <string name="auto_wifi_open">正在打开WiFi</string>
    <string name="auto_wifi_search">开始搜索WiFi</string>
    <string name="auto_wifi_not_find">没有发现WiFi设备</string>
    <string name="auto_wifi_find">找到WiFi设备</string>
    <string name="auto_gps">GPS</string>
    <string name="gps_location_title">位置经纬度:</string>
    <string name="gps_satellite_title">卫星信息:</string>
    <string name="gps_source_set">GPS已开启</string>
    <string name="gps_source_not_set">GPS未开启</string>
    <string name="GPS">GPS</string>
    <string name="gps_start">开始</string>
    <string name="gps_stop">停止</string>
    <string name="gps_search">GPS查找中...</string>
    <string name="gps_satellite">卫星</string>
    <string name="gps_prn">PRN</string>
    <string name="gps_snr">SNR</string>
    <string name="gps_longitude">经度: </string>
    <string name="gps_latitude">纬度: </string>
    <string name="gps_altitude">海拔: </string>
    <string name="gps_time">用时: </string>
    <string name="auto_camera">照相机</string>
    <string name="camera_switch">前后切换</string>
    <string name="camera_take">拍照</string>
    <string name="auto_receiver">受话器</string>
    <string name="audio_receiver_info">请检查受话器</string>
    <string name="auto_nfc">NFC</string>
    <string name="auto_nfc_info">请刷NFC标签</string>
    <string name="auto_nfc_not_support">手机不支持NFC</string>
    <string name="battery_power">"电池电量"</string>
    <string name="auto_backlight">背光</string>
    <string name="auto_earphone">耳机</string>
    <string name="auto_sensor">传感器</string>
    <string name="test_cp_crash">测试CP死机</string>
    <string name="test_ap_crash">测试AP死机</string>
    <string name="crash_dump_switch">死机Dump保存</string>
    <string name="crash_dump_switch_on">保存</string>
    <string name="crash_dump_switch_off">不保存(立刻重启)</string>
    <string name="master_clear_title">恢复出厂设置</string>
    <string name="master_clear_summary">清除手机上的所有数据</string>
    <string name="master_clear_info">恢复出厂设置中...</string>
    <string name="TouchPanel">触摸屏</string>
    <string name="Vibration">振动</string>
    <string name="test_start">开始</string>
    <string name="test_stop">停止</string>
    <string name="NV_backup">备份</string>
    <string name="NV_resume">恢复</string>
    <string name="NV_earse">擦除</string>
    <string name="backlight_mode">BackLight mode</string>
    <string name="keyboardlight_mode">keyboardLight mode</string>
    <string name="bt_mode">BlueTooth</string>
    <string name="wifi_mode">WiFi</string>
    <string name="camera_mode">Camera</string>
    <string name="fm_mode">FM</string>
    <string name="TouchPanel_mode">TouchPanel</string>
    <string name="PA_mode">PA</string>
    <string name="RF_mode">RF</string>
    <string name="vibrate_mode">Vibrate</string>
    <string name="ligsensor_mode">Light Sensor</string>
    <string name="accsensor_mode">Accelerometer Sensor</string>
    <string name="magsensor_mode">Magnetic Sensor</string>
    <string name="prosensor_mode">Proximity Sensor</string>
    <string name="micreceiver_mode">Mic Receiver</string>
    <string name="notwork">Not Work</string>
    <string name="auto_finish_key">结束键：退出</string>
    <string name="auto_success">成功</string>
    <string name="auto_fail">失败</string>
    <string name="auto_continue">继续</string>
    <string name="auto_retest">重测</string>
    <string name="auto_menu">菜单键：重测</string>
    <string name="text_fail">测试失败，仍然继续？</string>
    <string name="auto_exit">退出</string>
    <string name="Press_to_test">按此测试</string>
</resources>