<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <!-- Device hardware model -->
  <Preference android:key="device_model" 
    style="?android:preferenceInformationStyle"
    android:title="@string/model_number"
    android:summary="@string/device_info_default"/>
                
  <!-- Device firmware version -->
  <Preference android:key="firmware_version" 
    style="?android:preferenceInformationStyle"
    android:title="@string/firmware_version"
    android:summary="@string/device_info_default"/>
                
  <!-- Device Baseband version -->
  <Preference android:key="baseband_version" 
    style="?android:preferenceInformationStyle"
    android:title="@string/baseband_version"
    android:summary="@string/device_info_default"/>
        
  <!-- Device Kernel version -->
  <Preference android:key="kernel_version" 
    style="?android:preferenceInformationStyle"
    android:title="@string/kernel_version"
    android:summary="@string/device_info_default"/>

  <!-- Detailed build version -->
  <Preference android:key="build_number" 
    style="?android:preferenceInformationStyle"
    android:title="@string/build_number"
    android:summary="@string/device_info_default"/>
</PreferenceScreen>
