<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    > 
		<TextView  
    android:id="@+id/auto_usb_info"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="24dip"
    android:paddingTop="30dip"
    android:text="@string/auto_usb_info"
    />
    <TextView  
    android:id="@+id/auto_usb_step1"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:paddingTop="10dip"
    android:text="@string/auto_usb_step1"
    />
		<TextView  
    android:id="@+id/auto_usb_step2"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:text="@string/auto_usb_step2"
    />
		<TextView  
    android:id="@+id/auto_usb_step3"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:text="@string/auto_usb_step3"
    />
		<TextView  
    android:id="@+id/auto_usb_step4"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:text="@string/auto_usb_step4"
    />
                        
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom">
    <Button
    android:id="@+id/usb_fail"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:text="@string/auto_fail">
    </Button>
    </LinearLayout>
</LinearLayout>
