<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    > 
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:text="@string/model_number"
    />
    <TextView  
    android:id="@+id/auto_mod"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/device_info_default"
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:text="@string/firmware_version"
    />
    <TextView  
    android:id="@+id/auto_fir"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/device_info_default"
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:text="@string/baseband_version"
    />
    <TextView  
    android:id="@+id/auto_bas"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/device_info_default"
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:text="@string/kernel_version"
    />
    <TextView 
    android:id="@+id/auto_ker" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/device_info_default"
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:text="@string/build_number"
    />
    <TextView  
    android:id="@+id/auto_bud"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/device_info_default"
    />
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom">
    <Button
    android:id="@+id/version_success"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight = "1"
    android:layout_gravity="bottom"
    android:text="@string/auto_success">
    </Button>
    <Button
    android:id="@+id/version_fail"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight = "1"
    android:layout_gravity="bottom"
    android:text="@string/auto_fail">
    </Button>
    </LinearLayout>
</LinearLayout>
