<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    > 
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:paddingTop="30dip"
    android:text="@string/audio_speaker_info"
    />

    <TextView  
    android:id="@+id/music_audio_left"
    android:layout_width="100dip" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:paddingTop="30dip"
    android:text="@string/audio_left"
    />
    <TextView  
    android:id="@+id/music_audio_right"
    android:layout_width="100dip" 
    android:layout_height="wrap_content" 
    android:textSize="20dip"
    android:paddingTop="30dip"
    android:text="@string/audio_right"
    />

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom">
    <Button
    android:id="@+id/music_success"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight = "1"
    android:layout_gravity="bottom"
    android:text="@string/auto_success">
    </Button>
    <Button
    android:id="@+id/music_fail"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight = "1"
    android:layout_gravity="bottom"
    android:text="@string/auto_fail">
    </Button>
    </LinearLayout>
</LinearLayout>
